--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-analytics": "github:superdesk/superdesk-analytics#master",
-        "superdesk-core": "github:superdesk/superdesk-client-core#master",
-        "superdesk-planning": "github:superdesk/superdesk-planning#master"
+        "superdesk-analytics": "github:superdesk/superdesk-analytics#develop",
+        "superdesk-core": "github:superdesk/superdesk-client-core#develop",
+        "superdesk-planning": "github:superdesk/superdesk-planning#develop"
     }
 }
