--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: "CI"
+name: "Test"
 
 on:
   push:
@@ -25,24 +25,11 @@ jobs:
 
     - run: sudo apt-get -y install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libexempi3
 
-    - run: docker-compose -f ../.travis-docker-compose.yml up -d
-
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('server/dev-requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip
-          ${{ runner.os }}-
+    - run: docker-compose up -d
 
     - run: |
         python -m pip install --upgrade pip wheel setuptools
         pip install -r dev-requirements.txt
-
-    - run: flake8
-
-    - run: mypy .
 
     - run: nosetests
 
@@ -62,14 +49,6 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: 12.x
-
-    - uses: actions/cache@v2
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-npm-${{ hashFiles('client/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-npm
-          ${{ runner.os }}-
 
     - run: npm install --no-audit
 
