--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,4 @@
 gunicorn>=20.0.4,<20.1
 honcho==1.0.1
 
--e git+git://github.com/superdesk/superdesk-core.git@develop#egg=superdesk-core
+-e git+git://github.com/superdesk/superdesk-core.git@release/2.2#egg=superdesk-core
