--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,6 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:superdesk/superdesk-client-core#develop"
+        "superdesk-core": "github:superdesk/superdesk-client-core#release/2.2"
     }
 }
