--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,3 +2,4 @@ gunicorn>=20.0.4,<20.1
 honcho==1.0.1
 
 -e git+git://github.com/superdesk/superdesk-core.git@release/2.2#egg=superdesk-core
+-e git+git://github.com/superdesk/superdesk-planning.git@release/2.2#egg=superdesk-planning
