fix test install

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         python-version: 3.6
 
-    - run: sudo apt-get -y install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libexempi3
+    - run: sudo apt-get -y install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libexempi-dev
 
     - run: docker-compose -f ../.travis-docker-compose.yml up -d
 
