--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:superdesk/superdesk-client-core#f20d9b9",
+        "superdesk-core": "github:petrjasek/superdesk-client-core#release/2.2",
         "superdesk-planning": "github:superdesk/superdesk-planning#release/2.2"
     }
 }
