--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         python-version: 3.6
 
-    - run: sudo apt-get -y install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libexempi3
+    - run: sudo apt-get -y install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libexempi-dev
 
     - run: docker-compose -f ../.travis-docker-compose.yml up -d
 
@@ -76,7 +76,7 @@ jobs:
     - run: npm install --no-audit
 
     - run: node --max_old_space_size=4098 ./node_modules/.bin/grunt build
-  
+
   docker:
 
     runs-on: ubuntu-latest
