build extensions in root repository

--- a/client/package.json
+++ b/client/package.json
@@ -4,5 +4,9 @@
     "dependencies": {
         "superdesk-core": "github:superdesk/superdesk-client-core#develop",
         "superdesk-planning": "github:superdesk/superdesk-planning#develop"
+    },
+    "scripts": {
+        "watch-css-from-extensions": "node build-extensions.js --watch",
+        "postinstall": "node build-extensions.js"
     }
 }
