--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,9 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:superdesk/superdesk-client-core#develop",
-        "superdesk-planning": "github:superdesk/superdesk-planning#develop",
-        "@superdesk/planning-extension": "^1.0.5"
+        "@superdesk/planning-extension": "^1.0.6",
+        "superdesk-core": "github:tomaskikutis/superdesk-client-core#expect-root-dir-when-registering-extensions",
+        "superdesk-planning": "github:superdesk/superdesk-planning#develop"
     },
     "scripts": {
         "watch-css-from-extensions": "node build-extensions.js --watch",
