--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
         sudo apt-get update
         sudo apt-get -y install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libexempi-dev
 
-    - run: docker-compose up -d
+    - run: docker-compose up -d mongo redis elastic
 
     - run: |
         python -m pip install --upgrade pip wheel setuptools
@@ -55,7 +55,7 @@ jobs:
     - run: npm install --no-audit
 
     - run: node --max_old_space_size=4098 ./node_modules/.bin/grunt build
-  
+
   docker:
 
     runs-on: ubuntu-latest
