copy superdesk.config.js

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /tmp/client
 RUN npm install -g grunt-cli
 COPY package.json .
 COPY build-extensions.js .
+COPY superdesk.config.js .
 RUN npm install --no-audit --unsafe-perm
 COPY . .
 RUN npx grunt build
