--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,14 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "@superdesk/build-tools": "^1.0.3",
         "@superdesk/planning-extension": "^1.0.6",
         "superdesk-core": "github:superdesk/superdesk-client-core#develop",
         "superdesk-planning": "github:superdesk/superdesk-planning#develop"
     },
     "scripts": {
-        "build": "node --max_old_space_size=4098 ./node_modules/.bin/grunt build && npx @superdesk/build-tools prepare-root-repo ./ && npx @superdesk/build-tools extensions build ./"
+        "build": "npx @superdesk/build-tools build-root-repo ./"
+    },
+    "devDependencies": {
+        "@superdesk/build-tools": "^1.0.4"
     }
 }
