Build extensions in root repository (#3237)

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,14 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
+        "@superdesk/planning-extension": "^1.0.6",
         "superdesk-core": "github:superdesk/superdesk-client-core#develop",
         "superdesk-planning": "github:superdesk/superdesk-planning#develop"
+    },
+    "scripts": {
+        "build": "npx @superdesk/build-tools build-root-repo ./"
+    },
+    "devDependencies": {
+        "@superdesk/build-tools": "^1.0.5"
     }
 }
