--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
         sudo apt-get update
         sudo apt-get -y install libxml2-dev libxmlsec1-dev libxmlsec1-openssl libexempi-dev
 
-    - run: docker-compose up -d
+    - run: docker-compose up -d mongo redis elastic
 
     - run: |
         python -m pip install --upgrade pip wheel setuptools
