Build extensions in root repository

--- a/client/package.json
+++ b/client/package.json
@@ -4,5 +4,11 @@
     "license": "AGPL-3.0",
     "dependencies": {
         "superdesk-core": "github:superdesk/superdesk-client-core#develop"
+    },
+    "scripts": {
+        "build": "npx @superdesk/build-tools build-root-repo ./"
+    },
+    "devDependencies": {
+        "@superdesk/build-tools": "^1.0.10"
     }
 }
