--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -77,7 +77,7 @@ jobs:
 
     - run: npm install --no-audit
 
-    - run: node --max_old_space_size=4098 ./node_modules/.bin/grunt build
+    - run: npm run build
 
   docker:
 
