--- a/client/package.json
+++ b/client/package.json
@@ -6,5 +6,11 @@
         "superdesk-analytics": "github:superdesk/superdesk-analytics#develop",
         "superdesk-core": "github:superdesk/superdesk-client-core#develop",
         "superdesk-planning": "github:superdesk/superdesk-planning#develop"
+    },
+    "devDependencies": {
+        "@superdesk/build-tools": "^1.0.14"
+    },
+    "scripts": {
+        "build": "npx @superdesk/build-tools build-root-repo ./"
     }
 }
