--- a/client/package.json
+++ b/client/package.json
@@ -2,13 +2,13 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:superdesk/superdesk-client-core#develop",
-        "superdesk-planning": "github:superdesk/superdesk-planning#develop"
+        "superdesk-core": "github:superdesk/superdesk-client-core#release/2.3",
+        "superdesk-planning": "github:superdesk/superdesk-planning#release/2.3"
     },
     "scripts": {
         "build": "npx @superdesk/build-tools build-root-repo ./"
     },
     "devDependencies": {
-        "@superdesk/build-tools": "^1.0.10"
+        "@superdesk/build-tools": "^1.0.14"
     }
 }
