--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,6 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "2.2.0"
+        "superdesk-core": "github:superdesk/superdesk-client-core#hotfix/2.2.1"
     }
 }
