--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,5 +2,5 @@ gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
 
--e git+git://github.com/superdesk/superdesk-core.git@master#egg=Superdesk-Core
-sams-server==0.2.3
+-e git+git://github.com/superdesk/superdesk-core.git@hotfix/2.2.1#egg=Superdesk-Core
+sams-server==0.2.4
