--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:superdesk/superdesk-client-core#release/2.3",
+        "superdesk-core": "github:superdesk/superdesk-client-core#v2.3.0",
         "superdesk-planning": "github:superdesk/superdesk-planning#release/2.3"
     },
     "scripts": {
