use venv for python, make data install configurable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - mongodb
       - elastic
     environment:
+      - DEMO_DATA=1 # install demo data, set to 0 if you want clean install
       - WEB_CONCURRENCY=2
       - SUPERDESK_CLIENT_URL=http://localhost:8080
       - CONTENTAPI_URL=http://localhost:8080/capi
