--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND=noninteractive 
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-python3 python3-dev python3-pip git gcc mongo-tools mongodb-clients curl \
+python3 python3-dev python3-pip python3-venv git gcc mongo-tools mongodb-clients curl \
 # lxml
 libxml2-dev libxslt-dev \
 # PIL
@@ -12,7 +12,12 @@ libjpeg-dev zlib1g-dev \
 libmagic-dev \
 && rm -rf /var/lib/apt/lists/* 
 
-# update pip
+# setup venv
+ENV VIRTUAL_ENV=/opt/venv
+RUN python3 -m venv "$VIRTUAL_ENV"
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+
+# update venv
 RUN python3 -m pip install -U pip wheel setuptools
 
 # install server
