push to dockerhub on release

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - superdesk
 
   superdesk-server:
-    image: sourcefabricoss/superdesk-server:demo
+    image: sourcefabricoss/superdesk-server:latest
     depends_on:
       - redis
       - mongodb
