--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -1,70 +1,22 @@
-name: Publish Docker images
+name: Publish Docker Images
 
 on:
-  push:
-    branches: []
+  release:
+    types: [published]
 
 jobs:
-  server:
+  push_to_dockerhub:
+    name: Push Docker images to Docker Hub
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: server
-
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
+
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - 
-        name: Build and push image
-        uses: docker/build-push-action@v2
-        id: docker_build
-        with:
-          push: true
-          tags: sourcefabricoss/superdesk-server:demo
-          context: server
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outpus.digest }}
-
-  client:
-    runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: client
-
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - 
-        name: Build and push image
-        uses: docker/build-push-action@v2
-        id: docker_build
-        with:
-          push: true
-          tags: sourcefabricoss/superdesk-client:demo
-          context: client
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outpus.digest }}
+      
+      - name: Build and push image
+        run: docker-compose build && docker-compose push
