--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,7 +1,7 @@
 version: "3.2"
 services:
-  server:
+  superdesk-server:
     build: ./server
 
-  client:
+  superdesk-client:
     build: ./client
