--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,5 @@
 gunicorn>=20.0.4,<20.1
 honcho==1.0.1
 
--e git+git://github.com/superdesk/superdesk-core.git@develop#egg=Superdesk-Core
--e git+git://github.com/superdesk/sams.git@develop#egg=sams_client&subdirectory=src/clients/python/
+-e git+https://github.com/superdesk/superdesk-core.git@develop#egg=Superdesk-Core
+-e git+https://github.com/superdesk/sams.git@develop#egg=sams_client&subdirectory=src/clients/python/
