use Planning release/2.4 branch

--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
     "license": "AGPL-3.0",
     "dependencies": {
         "superdesk-core": "github:superdesk/superdesk-client-core#release/2.4",
-        "superdesk-planning": "github:superdesk/superdesk-planning#develop"
+        "superdesk-planning": "github:superdesk/superdesk-planning#release/2.4"
     },
     "scripts": {
         "build": "npx @superdesk/build-tools build-root-repo ./"
