--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,4 +2,4 @@ gunicorn>=20.0.4,<20.1
 honcho==1.0.1
 
 -e git+https://github.com/superdesk/superdesk-core.git@release/2.4#egg=superdesk-core
--e git+https://github.com/superdesk/superdesk-planning.git@develop#egg=superdesk-planning
+-e git+https://github.com/superdesk/superdesk-planning.git@release/2.4#egg=superdesk-planning
