--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,8 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:superdesk/superdesk-client-core#develop",
-        "superdesk-planning": "github:superdesk/superdesk-planning#develop"
+        "superdesk-core": "github:superdesk/superdesk-client-core#v2.5.0-rc1",
+        "superdesk-planning": "github:superdesk/superdesk-planning#v2.5.0-rc1"
     },
     "scripts": {
         "build": "npx @superdesk/build-tools build-root-repo ./"
