--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,5 @@
 gunicorn>=20.0.4,<20.1
 honcho==1.0.1
 
--e git+https://github.com/superdesk/superdesk-core.git@v2.4.0#egg=superdesk-core
--e git+https://github.com/superdesk/superdesk-planning.git@v2.4.0#egg=superdesk-planning
+git+https://github.com/superdesk/superdesk-core.git@develop#egg=superdesk-core
+git+https://github.com/superdesk/superdesk-planning.git@develop#egg=superdesk-planning
