--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,8 @@
     "license": "AGPL-3.0",
     "dependencies": {
         "superdesk-core": "github:superdesk/superdesk-client-core#v2.5.0-rc1",
-        "superdesk-planning": "github:superdesk/superdesk-planning#v2.5.0-rc3"
+        "superdesk-planning": "github:superdesk/superdesk-planning#v2.5.0-rc3",
+        "superdesk-analytics": "github:superdesk/superdesk-analytics#v2.5.0-rc1"
     },
     "scripts": {
         "build": "npx @superdesk/build-tools build-root-repo ./"
