--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,3 +3,4 @@ honcho==1.0.1
 
 git+https://github.com/superdesk/superdesk-core.git@v2.5.0-rc1#egg=superdesk-core
 git+https://github.com/superdesk/superdesk-planning.git@v2.5.0-rc3#egg=superdesk-planning
+git+https://github.com/superdesk/superdesk-analytics.git@v2.5.0-rc1#egg=superdesk-analytics
