--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements.in
 #
+-e git+https://github.com/superdesk/superdesk-core.git@develop#egg=superdesk-core
+    # via -r requirements.in
 amqp==2.6.1
     # via kombu
 arrow==0.13.0
@@ -226,8 +228,6 @@ six==1.16.0
     #   flask-oidc-ex
     #   oauth2client
     #   python-dateutil
-superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@develop
-    # via -r requirements.in
 superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@develop
     # via -r requirements.in
 typing-extensions==4.3.0
