--- a/server/requirements.in
+++ b/server/requirements.in
@@ -1,5 +1,5 @@
 honcho
 gunicorn
 
-git+https://github.com/superdesk/superdesk-core.git@v2.5.0#egg=superdesk-core
-git+https://github.com/superdesk/superdesk-planning.git@v2.5.0-rc6#egg=superdesk-planning
+git+https://github.com/superdesk/superdesk-core.git@v2.5.2#egg=superdesk-core
+git+https://github.com/superdesk/superdesk-planning.git@v2.5.1#egg=superdesk-planning
