Update superdesk-client to beta 2.6

--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,12 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:superdesk/superdesk-client-core#develop"
+        "superdesk-core": "github:superdesk/superdesk-client-core#beta/2.6-updated"
     },
     "scripts": {
         "build": "npx @superdesk/build-tools build-root-repo ./"
     },
     "devDependencies": {
-        "@superdesk/build-tools": "^1.0.10"
+        "@superdesk/build-tools": "^1.0.18"
     }
 }
