--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,8 +1,6 @@
 name: "Test"
 
-on:
-  push:
-  pull_request:
+on: [push, pull_request]
 
 jobs:
 
@@ -15,11 +13,11 @@ jobs:
         working-directory: server
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v4
       with:
-        python-version: 3.6
+        python-version: ${{ matrix.python-version }}
 
     - run: |
         sudo apt-get update
@@ -27,9 +25,13 @@ jobs:
 
     - run: |
         python -m pip install --upgrade pip wheel setuptools
-        pip install -r dev-requirements.txt
+        python -m pip install -r dev-requirements.txt
 
   client:
+
+    strategy:
+      matrix:
+        node-version: ['12.x', '14.x']
 
     runs-on: ubuntu-latest
 
@@ -38,13 +40,13 @@ jobs:
         working-directory: client
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@v3
       with:
-        node-version: 12.x
+        node-version: ${{ matrix.node-version }}
 
-    - run: npm install --no-audit
+    - run: npm install
 
     - run: npm run build
   
@@ -53,6 +55,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - run: docker-compose build
