update core/planning to release/2.6 branch

--- a/server/requirements.in
+++ b/server/requirements.in
@@ -1,5 +1,5 @@
 honcho
 gunicorn
 
-git+https://github.com/superdesk/superdesk-core.git@develop#egg=superdesk-core
-git+https://github.com/superdesk/superdesk-planning.git@develop#egg=superdesk-planning
+git+https://github.com/superdesk/superdesk-core.git@release/2.6#egg=superdesk-core
+git+https://github.com/superdesk/superdesk-planning.git@release/2.6#egg=superdesk-planning
