--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -226,9 +226,9 @@ six==1.16.0
     #   flask-oidc-ex
     #   oauth2client
     #   python-dateutil
-superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@v2.6.0rc3
+superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@v2.6.0
     # via -r requirements.in
-superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@v2.6.0-rc2
+superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@v2.6.0
     # via -r requirements.in
 typing-extensions==4.4.0
     # via superdesk-core
