--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,93 @@
-gunicorn>=20.0.4,<20.1
-honcho==1.0.1
+gunicorn==20.1.0
+honcho==1.1.0
 
 git+https://github.com/superdesk/superdesk-core.git@v2.3.8#egg=superdesk-core
-git+https://github.com/superdesk/superdesk-planning.git@v2.3.1#egg=superdesk-planning
+git+https://github.com/superdesk/superdesk-planning.git@v2.3.2#egg=superdesk-planning
+
+## The following requirements were added by pip freeze:
+amqp==2.6.1
+arrow==0.13.0
+Authlib==0.14.3
+Babel==2.12.1
+bcrypt==3.1.7
+billiard==3.6.4.0
+blinker==1.4
+boto3==1.5.36
+botocore==1.8.50
+cachetools==5.3.0
+celery==4.4.7
+Cerberus==1.3.4
+certifi==2022.12.7
+cffi==1.15.1
+chardet==3.0.4
+charset-normalizer==3.1.0
+ciso8601==1.0.8
+click==7.1.2
+croniter==0.3.37
+cryptography==39.0.2
+deepdiff==3.3.0
+Deprecated==1.2.13
+docutils==0.19
+draftjs-exporter==2.1.7
+elastic-apm==6.7.2
+elasticsearch==7.13.4
+Eve==1.1.2
+Eve-Elastic==7.3.1
+Events==0.3
+feedparser==6.0.10
+Flask==1.1.4
+Flask-Babel==1.0.0
+Flask-Mail==0.9.1
+flask-oidc-ex==0.5.5
+Flask-Script==2.0.6
+future==0.18.3
+hachoir==3.0a3
+HermesCache==0.7.2
+httplib2==0.21.0
+icalendar==4.0.9
+idna==3.4
+importlib-metadata==3.1.1
+itsdangerous==1.1.0
+Jinja2==2.11.3
+jmespath==0.10.0
+jsonpickle==3.0.1
+jwcrypto==1.4.2
+kombu==4.6.11
+ldap3==2.5.2
+lxml==4.6.5
+MarkupSafe==2.0.1
+mongolock==1.3.4
+natsort==8.3.1
+oauth2client==4.1.3
+oauthlib==3.2.2
+Pillow==8.1.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pymongo==3.11.4
+pyparsing==3.0.9
+python-dateutil==2.7.5
+python-jwt==4.0.0
+python-magic==0.4.27
+python-twitter==3.5
+pytz==2022.7.1
+PyYAML==4.2b4
+raven==6.10.0
+redis==3.2.1
+regex==2020.7.14
+requests==2.28.2
+requests-oauthlib==1.3.1
+rsa==4.9
+s3transfer==0.1.13
+sgmllib3k==1.0.0
+simplejson==3.18.3
+six==1.16.0
+typing_extensions==4.5.0
+tzlocal==1.5.1
+Unidecode==0.4.21
+urllib3==1.25.11
+vine==1.3.0
+websockets==6.0
+Werkzeug==1.0.1
+wrapt==1.15.0
+zipp==3.15.0
