--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
         "build": "npx @superdesk/build-tools build-root-repo ./"
     },
     "devDependencies": {
-        "@superdesk/build-tools": "^1.0.14"
+        "@superdesk/build-tools": "^1.0.14",
+        "@types/node": "^14.14.20"
     }
 }
