--- a/server/requirements.in
+++ b/server/requirements.in
@@ -1,5 +1,6 @@
 gunicorn
 honcho
+eve-elastic<=7.3
 
 git+https://github.com/superdesk/superdesk-core.git@v2.3.8#egg=superdesk-core
 git+https://github.com/superdesk/superdesk-planning.git@v2.3.2#egg=superdesk-planning
