--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:superdesk/superdesk-client-core#develop",
+        "superdesk-core": "github:superdesk/superdesk-client-core#big-merge",
         "superdesk-planning": "github:superdesk/superdesk-planning#develop"
     },
     "scripts": {
@@ -10,6 +10,6 @@
     },
     "devDependencies": {
         "@superdesk/build-tools": "^1.0.18",
-        "@types/node": "^14.14.20"
+        "@types/node": "^14.18.40"
     }
 }
