--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -26,9 +26,9 @@ blinker==1.4
     #   flask-mail
     #   raven
     #   superdesk-core
-boto3==1.34.21
+boto3==1.34.32
     # via superdesk-core
-botocore==1.34.21
+botocore==1.34.32
     # via
     #   boto3
     #   s3transfer
@@ -73,7 +73,7 @@ click-repl==0.3.0
     # via celery
 croniter==0.3.37
     # via superdesk-core
-cryptography==41.0.7
+cryptography==42.0.2
     # via
     #   authlib
     #   jwcrypto
@@ -218,7 +218,7 @@ python-magic==0.4.27
     # via superdesk-core
 python-twitter==3.5
     # via superdesk-core
-pytz==2023.3.post1
+pytz==2023.4
     # via
     #   celery
     #   eve-elastic
