--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
+        "superdesk-analytics": "github:superdesk/superdesk-analytics#develop",
         "superdesk-core": "github:superdesk/superdesk-client-core#develop",
         "superdesk-planning": "github:superdesk/superdesk-planning#develop"
     },
