--- a/server/requirements.in
+++ b/server/requirements.in
@@ -3,3 +3,4 @@ honcho
 
 git+https://github.com/superdesk/superdesk-core.git@develop#egg=superdesk-core
 git+https://github.com/superdesk/superdesk-planning.git@develop#egg=superdesk-planning
+git+https://github.com/superdesk/superdesk-analytics.git@develop#egg=superdesk-analytics
