--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile requirements.in
 #
-amqp==5.1.1
+amqp==5.2.0
     # via kombu
 arrow==0.13.0
     # via
@@ -14,44 +14,46 @@ async-timeout==4.0.3
     # via redis
 authlib==0.14.3
     # via superdesk-core
-babel==2.12.1
+babel==2.14.0
     # via flask-babel
 bcrypt==3.1.7
     # via superdesk-core
 billiard==3.6.4.0
     # via celery
-blinker==1.4
+blinker==1.7.0
     # via
     #   elastic-apm
     #   flask-mail
     #   raven
     #   superdesk-core
-boto3==1.28.55
+boto3==1.34.43
     # via superdesk-core
-botocore==1.31.55
+botocore==1.34.43
     # via
     #   boto3
     #   s3transfer
-cachetools==5.3.1
+cachetools==5.3.2
     # via flask-oidc-ex
 celery[redis]==5.2.7
-    # via superdesk-core
+    # via
+    #   celery
+    #   superdesk-core
 cerberus==1.3.5
     # via
     #   eve
     #   superdesk-core
-certifi==2023.7.22
+certifi==2024.2.2
     # via
     #   elastic-apm
     #   elasticsearch
     #   requests
-cffi==1.15.1
+cffi==1.16.0
     # via
     #   bcrypt
     #   cryptography
-chardet==3.0.4
+chardet==5.2.0
     # via superdesk-core
-charset-normalizer==3.2.0
+charset-normalizer==3.3.2
     # via requests
 ciso8601==1.0.8
     # via eve-elastic
@@ -71,20 +73,22 @@ click-repl==0.3.0
     # via celery
 croniter==0.3.37
     # via superdesk-core
-cryptography==41.0.4
+cryptography==42.0.3
     # via
     #   authlib
     #   jwcrypto
-deepdiff==6.5.0
+deepdiff==6.7.1
     # via superdesk-planning
-deprecated==1.2.14
-    # via jwcrypto
 draftjs-exporter[lxml]==2.1.7
-    # via superdesk-core
+    # via
+    #   draftjs-exporter
+    #   superdesk-core
 ecs-logging==2.1.0
     # via elastic-apm
-elastic-apm[flask]==6.18.0
-    # via superdesk-core
+elastic-apm[flask]==6.20.0
+    # via
+    #   elastic-apm
+    #   superdesk-core
 elasticsearch==7.13.4
     # via eve-elastic
 eve==1.1.2
@@ -93,7 +97,7 @@ eve-elastic==7.3.2
     # via superdesk-core
 events==0.3
     # via eve
-feedparser==6.0.10
+feedparser==6.0.11
     # via superdesk-core
 flask==1.1.2
     # via
@@ -126,7 +130,7 @@ httplib2==0.22.0
     # via oauth2client
 icalendar==4.0.9
     # via superdesk-planning
-idna==3.4
+idna==3.6
     # via requests
 itsdangerous==1.1.0
     # via
@@ -142,7 +146,7 @@ jmespath==1.0.1
     # via
     #   boto3
     #   botocore
-jwcrypto==1.5.0
+jwcrypto==1.5.4
     # via
     #   flask-oidc-ex
     #   python-jwt
@@ -170,15 +174,15 @@ oauthlib==3.2.2
     # via requests-oauthlib
 ordered-set==4.1.0
     # via deepdiff
-packaging==23.1
+packaging==23.2
     # via gunicorn
 pillow==9.2.0
     # via
     #   reportlab
     #   superdesk-core
-prompt-toolkit==3.0.39
+prompt-toolkit==3.0.43
     # via click-repl
-pyasn1==0.5.0
+pyasn1==0.5.1
     # via
     #   ldap3
     #   oauth2client
@@ -199,20 +203,20 @@ pymongo==3.11.4
     #   superdesk-core
 pyparsing==3.1.1
     # via httplib2
-python-dateutil==2.7.5
+python-dateutil==2.8.2
     # via
     #   arrow
     #   botocore
     #   croniter
     #   icalendar
     #   superdesk-core
-python-jwt==4.0.0
+python-jwt==4.1.0
     # via flask-oidc-ex
 python-magic==0.4.27
     # via superdesk-core
 python-twitter==3.5
     # via superdesk-core
-pytz==2023.3.post1
+pytz==2024.1
     # via
     #   celery
     #   eve-elastic
@@ -223,7 +227,9 @@ pytz==2023.3.post1
 pyyaml==6.0.1
     # via superdesk-core
 raven[flask]==6.10.0
-    # via superdesk-core
+    # via
+    #   raven
+    #   superdesk-core
 redis==4.5.5
     # via
     #   celery
@@ -241,11 +247,11 @@ requests-oauthlib==1.3.1
     # via python-twitter
 rsa==4.9
     # via oauth2client
-s3transfer==0.7.0
+s3transfer==0.10.0
     # via boto3
 sgmllib3k==1.0.0
     # via feedparser
-simplejson==3.19.1
+simplejson==3.19.2
     # via eve
 six==1.16.0
     # via
@@ -257,8 +263,10 @@ superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@release/2.7
     # via -r requirements.in
 superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@develop
     # via -r requirements.in
-typing-extensions==4.8.0
-    # via superdesk-core
+typing-extensions==4.9.0
+    # via
+    #   jwcrypto
+    #   superdesk-core
 tzlocal==2.1
     # via superdesk-core
 unidecode==0.4.21
@@ -270,12 +278,12 @@ urllib3==1.25.11
     #   elasticsearch
     #   requests
     #   superdesk-core
-vine==5.0.0
+vine==5.1.0
     # via
     #   amqp
     #   celery
     #   kombu
-wcwidth==0.2.6
+wcwidth==0.2.13
     # via prompt-toolkit
 websockets==10.3
     # via superdesk-core
@@ -283,7 +291,5 @@ werkzeug==1.0.1
     # via
     #   flask
     #   superdesk-core
-wrapt==1.15.0
-    # via
-    #   deprecated
-    #   elastic-apm
+wrapt==1.14.1
+    # via elastic-apm
