--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,8 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:superdesk/superdesk-client-core#authoring-react-post-broadcasting",
-        "superdesk-planning": "github:superdesk/superdesk-planning#authoring-react-post-broadcasting"
+        "superdesk-core": "github:superdesk/superdesk-client-core#release/2.7",
+        "superdesk-planning": "github:superdesk/superdesk-planning#develop"
     },
     "scripts": {
         "build": "npx @superdesk/build-tools build-root-repo ./",
