Update planning to release/2.7 branch

--- a/server/requirements.in
+++ b/server/requirements.in
@@ -2,4 +2,4 @@ gunicorn
 honcho
 
 git+https://github.com/superdesk/superdesk-core.git@release/2.7#egg=superdesk-core
-git+https://github.com/superdesk/superdesk-planning.git@develop#egg=superdesk-planning
+git+https://github.com/superdesk/superdesk-planning.git@release/2.7#egg=superdesk-planning
