--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -26,18 +26,16 @@ blinker==1.7.0
     #   flask-mail
     #   raven
     #   superdesk-core
-boto3==1.34.49
+boto3==1.34.62
     # via superdesk-core
-botocore==1.34.49
+botocore==1.34.62
     # via
     #   boto3
     #   s3transfer
-cachetools==5.3.2
+cachetools==5.3.3
     # via flask-oidc-ex
 celery[redis]==5.2.7
-    # via
-    #   celery
-    #   superdesk-core
+    # via superdesk-core
 cerberus==1.3.5
     # via
     #   eve
@@ -55,7 +53,7 @@ chardet==5.2.0
     # via superdesk-core
 charset-normalizer==3.3.2
     # via requests
-ciso8601==1.0.8
+ciso8601==2.3.1
     # via eve-elastic
 click==8.1.7
     # via
@@ -80,20 +78,18 @@ cryptography==42.0.5
 deepdiff==6.7.1
     # via superdesk-planning
 draftjs-exporter[lxml]==2.1.7
-    # via
-    #   draftjs-exporter
-    #   superdesk-core
+    # via superdesk-core
 ecs-logging==2.1.0
     # via elastic-apm
-elastic-apm[flask]==6.20.0
-    # via
-    #   elastic-apm
-    #   superdesk-core
+elastic-apm[flask]==6.21.3
+    # via superdesk-core
 elasticsearch==7.13.4
-    # via eve-elastic
+    # via
+    #   eve-elastic
+    #   superdesk-core
 eve==2.1.0
     # via superdesk-core
-eve-elastic==7.3.2
+eve-elastic==7.4.0
     # via superdesk-core
 events==0.3
     # via eve
@@ -108,7 +104,7 @@ flask==1.1.2
     #   flask-script
     #   raven
     #   superdesk-core
-flask-babel==1.0.0
+flask-babel==2.0.0
     # via superdesk-core
 flask-mail==0.9.1
     # via superdesk-core
@@ -146,7 +142,7 @@ jmespath==1.0.1
     # via
     #   boto3
     #   botocore
-jwcrypto==1.5.4
+jwcrypto==1.5.6
     # via
     #   flask-oidc-ex
     #   python-jwt
@@ -174,7 +170,7 @@ oauthlib==3.2.2
     # via requests-oauthlib
 ordered-set==4.1.0
     # via deepdiff
-packaging==23.2
+packaging==24.0
     # via gunicorn
 pillow==9.2.0
     # via
@@ -201,7 +197,7 @@ pymongo==3.11.4
     #   eve
     #   mongolock
     #   superdesk-core
-pyparsing==3.1.1
+pyparsing==3.1.2
     # via httplib2
 python-dateutil==2.8.2
     # via
@@ -227,10 +223,8 @@ pytz==2024.1
 pyyaml==6.0.1
     # via superdesk-core
 raven[flask]==6.10.0
-    # via
-    #   raven
-    #   superdesk-core
-redis==4.5.5
+    # via superdesk-core
+redis==5.0.3
     # via
     #   celery
     #   superdesk-core
@@ -243,7 +237,7 @@ requests==2.31.0
     #   python-twitter
     #   requests-oauthlib
     #   superdesk-core
-requests-oauthlib==1.3.1
+requests-oauthlib==1.4.0
     # via python-twitter
 rsa==4.9
     # via oauth2client
