--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -20,24 +20,22 @@ bcrypt==3.1.7
     # via superdesk-core
 billiard==3.6.4.0
     # via celery
-blinker==1.4
+blinker==1.7.0
     # via
     #   elastic-apm
     #   flask-mail
     #   raven
     #   superdesk-core
-boto3==1.34.33
+boto3==1.34.63
     # via superdesk-core
-botocore==1.34.33
+botocore==1.34.63
     # via
     #   boto3
     #   s3transfer
-cachetools==5.3.2
+cachetools==5.3.3
     # via flask-oidc-ex
 celery[redis]==5.2.7
-    # via
-    #   celery
-    #   superdesk-core
+    # via superdesk-core
 cerberus==1.3.5
     # via
     #   eve
@@ -51,11 +49,11 @@ cffi==1.16.0
     # via
     #   bcrypt
     #   cryptography
-chardet==3.0.4
+chardet==5.2.0
     # via superdesk-core
 charset-normalizer==3.3.2
     # via requests
-ciso8601==1.0.8
+ciso8601==2.3.1
     # via eve-elastic
 click==8.1.7
     # via
@@ -73,29 +71,25 @@ click-repl==0.3.0
     # via celery
 croniter==0.3.37
     # via superdesk-core
-cryptography==42.0.2
+cryptography==42.0.5
     # via
     #   authlib
     #   jwcrypto
 deepdiff==6.7.1
     # via superdesk-planning
-deprecated==1.2.14
-    # via jwcrypto
 draftjs-exporter[lxml]==2.1.7
-    # via
-    #   draftjs-exporter
-    #   superdesk-core
+    # via superdesk-core
 ecs-logging==2.1.0
     # via elastic-apm
-elastic-apm[flask]==6.20.0
-    # via
-    #   elastic-apm
-    #   superdesk-core
-elasticsearch==7.13.4
-    # via eve-elastic
-eve==1.1.2
+elastic-apm[flask]==6.21.3
     # via superdesk-core
-eve-elastic==7.3.2
+elasticsearch==7.13.4
+    # via
+    #   eve-elastic
+    #   superdesk-core
+eve==2.1.0
+    # via superdesk-core
+eve-elastic==7.4.0
     # via superdesk-core
 events==0.3
     # via eve
@@ -110,7 +104,7 @@ flask==1.1.2
     #   flask-script
     #   raven
     #   superdesk-core
-flask-babel==1.0.0
+flask-babel==2.0.0
     # via superdesk-core
 flask-mail==0.9.1
     # via superdesk-core
@@ -118,7 +112,7 @@ flask-oidc-ex==0.5.5
     # via superdesk-core
 flask-script==2.0.6
     # via superdesk-core
-future==0.18.3
+future==1.0.0
     # via python-twitter
 gunicorn==21.2.0
     # via -r requirements.in
@@ -148,7 +142,7 @@ jmespath==1.0.1
     # via
     #   boto3
     #   botocore
-jwcrypto==1.5.1
+jwcrypto==1.5.6
     # via
     #   flask-oidc-ex
     #   python-jwt
@@ -176,7 +170,7 @@ oauthlib==3.2.2
     # via requests-oauthlib
 ordered-set==4.1.0
     # via deepdiff
-packaging==23.2
+packaging==24.0
     # via gunicorn
 pillow==9.2.0
     # via
@@ -203,9 +197,9 @@ pymongo==3.11.4
     #   eve
     #   mongolock
     #   superdesk-core
-pyparsing==3.1.1
+pyparsing==3.1.2
     # via httplib2
-python-dateutil==2.7.5
+python-dateutil==2.8.2
     # via
     #   arrow
     #   botocore
@@ -229,10 +223,8 @@ pytz==2024.1
 pyyaml==6.0.1
     # via superdesk-core
 raven[flask]==6.10.0
-    # via
-    #   raven
-    #   superdesk-core
-redis==4.5.5
+    # via superdesk-core
+redis==5.0.3
     # via
     #   celery
     #   superdesk-core
@@ -245,11 +237,11 @@ requests==2.31.0
     #   python-twitter
     #   requests-oauthlib
     #   superdesk-core
-requests-oauthlib==1.3.1
+requests-oauthlib==1.4.0
     # via python-twitter
 rsa==4.9
     # via oauth2client
-s3transfer==0.10.0
+s3transfer==0.10.1
     # via boto3
 sgmllib3k==1.0.0
     # via feedparser
@@ -265,8 +257,10 @@ superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@develop
     # via -r requirements.in
 superdesk-planning @ git+https://github.com/superdesk/superdesk-planning.git@develop
     # via -r requirements.in
-typing-extensions==4.9.0
-    # via superdesk-core
+typing-extensions==4.10.0
+    # via
+    #   jwcrypto
+    #   superdesk-core
 tzlocal==2.1
     # via superdesk-core
 unidecode==0.4.21
@@ -292,6 +286,4 @@ werkzeug==1.0.1
     #   flask
     #   superdesk-core
 wrapt==1.14.1
-    # via
-    #   deprecated
-    #   elastic-apm
+    # via elastic-apm
