--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,8 +8,8 @@ updates:
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "client" # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: "daily"
   - package-ecosystem: "pip" # See documentation for possible values
     directory: "server" # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: "daily"
